Prevent vertical badge overflow

--- a/CoachBot.UI/src/app/pages/hub/team-list/team-list.component.scss
+++ b/CoachBot.UI/src/app/pages/hub/team-list/team-list.component.scss
@@ -1,5 +1,6 @@
 
 .statistics-list--team-badge {
     max-width: 22px;
+    max-height: 22px;
     margin-top: -3px;
 }
